# apriltag_ros

apriltag_ros/: CMakeLists.txt  package.xml
apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros/include/apriltag_ros/: common_functions.h  continuous_detector.h
apriltag_ros/launch/: apriltag_ros_launch.py  continuous_detection.launch  test_launch.py
apriltag_ros/msg/: AprilTagDetection.msg
apriltag_ros/src/: apriltag_ros_continuous_node.cpp  common_functions.cpp  continuous_detector.cpp
