<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ajanani85@gmail.com">alireza</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>apriltag</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>Eigen3</depend>
  <depend>opencv</depend>
  <depend>brain_box_msgs</depend>
  <depend>am_utils</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
